<?xml version="1.0" encoding="utf-8"?>
<resources>

    //----- APP ----------/
    <string name="app_name">The Cocktail App</string>

    //----- BUTTONS ----------/
    <string name="back_button">Volver</string>
    <string name="cancel_button">Cancelar</string>
    <string name="ok_button">Aceptar</string>
    <string name="retry_button">Reintentar</string>
    <string name="see_button">Ver</string>
    <string name="show_steps_button">Mostrar pasos</string>

    //----- DIALOG ----------/
    <string name="title_error">Error</string>
    <string name="title_warning">Atención</string>

    //----- DRINKS ----------/
    <string name="db_alcoholic">Alcoholic</string>
    <string name="db_non_alcoholic">Non_Alcoholic</string>
    <string name="db_optional_alcohol">Optional_Alcohol</string>
    <string name="type_alcoholic">Alcohol</string>
    <string name="type_non_alcoholic">Sin alcohol</string>
    <string name="type_optional_alcohol">Opcional</string>

    //----- ERRORS ----------/
    <string name="error_generic">Error: %s</string>
    <string name="error_connectivity">Compruebe su conexión a Internet</string>
    <string name="error_data_not_found">Información no encontrada</string>
    <string name="error_deserializing_json">Error deserializando el fichero JSON</string>
    <string name="error_loading_data">Error cargando la información</string>
    <string name="error_loading_url">Error cargando la URL</string>

    //----- FRAGMENT (SPLASH) ----------/
    <string name="first_title_splash_fragment">Nuestra</string>
    <string name="second_title_splash_fragment">Recomendación</string>
    <string name="third_title_splash_fragment">Diaria</string>

    //----- FRAGMENT (DETAIL) ----------/
    <string name="label_alcoholic">Poción adulta</string>
    <string name="label_free">Cero resaca</string>
    <string name="label_optional">Tú decides</string>
    <string name="label_unknown">Sin </string>
    <string name="title_ingredients">Ingredientes</string>
    <string name="title_instructions">Preparación</string>

    //----- MENU ----------/
    <string name="menu_greeting_afternoon">Buenas tardes,</string>
    <string name="menu_greeting_morning">Buenos días,</string>
    <string name="menu_greeting_night">Buenas noches,</string>
    <string name="menu_item_close_session">Cerrar sesión</string>
    <string name="menu_item_favorites">Favoritas</string>
    <string name="menu_item_home">The Cocktail App</string>
    <string name="menu_time">08/12/2023 19:58</string>

    //----- MENU ----------/
    <string name="toolbar_title_home">The Cocktail App</string>
    <string name="toolbar_title_details">Detalles</string>
    <string name="toolbar_title_favorites">Favoritas</string>

    //----- WARNINGS ----------/
    <string name="warning_favorites_not_found">No se han guardado aún ninguna bebida en favoritos. Entra en los detalles de la bebida para guardar la primera :)</string>

</resources>